--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/gabygab159/chatbot",
+  "homepage": "https://gabygab159.github.io/",
   "name": "chatbot",
   "version": "0.1.0",
   "private": true,
