--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "homepage": "https://gabygab159.github.io/chatbot/",
   "name": "chatbot",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x"
+  },
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
